front/src/components/system/index.module.css
/* box COMPONENT */

.box {
  display: flex;
  flex-direction: column;
  position: relative;
}

.boxRow {
  flex-direction: row;
}

/* BUTTON COMPONENT */

.button {
  display: flex;
  align-items: center;
  background-color: var(--white);
  border: 1px solid var(--gray-medium);
  border-radius: 4px;
  font-weight: 600;
  padding: 8px 12px;
  padding-right: 16px;
  cursor: pointer;
  font-family: Source Sans Pro;
  font-size: var(--font-size);
  color: var(--black);
}

.button :global(.icon) {
  width: 20px;
  margin-right: 8px;
}

.button:hover {
  color: var(--blue-medium);
  border-color: var(--blue-medium);
  background-color: var(--gray-highlight);
}

.button:active {
  transform: translate3D(1px, 1px, 0);
}

.button:disabled {
  opacity: 0.5;
  cursor: auto;
  pointer-events: none;
}

.buttonPrimary {
  color: var(--white);
  background-color: var(--blue-medium);
  border-color: var(--blue-medium);
}

.buttonPrimary:hover {
  color: var(--white);
  background-color: var(--blue-dark);
}

.buttonSecondary {
  color: var(--blue-dark);
  background-color: var(--blue-light);
  border-color: var(--blue-medium);
}

.buttonSecondary:hover {
  color: var(--white);
  background-color: var(--blue-dark);
}

.buttonWarning {
  color: var(--orange-dark);
  background-color: var(--orange-light);
  border-color: var(--orange-medium);
}

.buttonWarning:hover {
  color: var(--white);
  background-color: var(--orange-dark);
  border-color: var(--orange-dark);
}

.buttonDanger {
  color: var(--red-dark);
  background-color: var(--red-light);
  border-color: var(--red-medium);
}

.buttonDanger:hover {
  color: var(--white);
  background-color: var(--red-dark);
  border-color: var(--red-dark);
}

.buttonSuccess {
  color: var(--green-dark);
  background-color: var(--green-light);
  border-color: var(--green-medium);
}

.buttonSuccess:hover {
  color: var(--white);
  background-color: var(--green-dark);
  border-color: var(--green-dark);
}

/* STATUS BUTTON */

.statusButton {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-around;
  font-family: Evolventa;
  font-size: 20px;
  font-weight: 400;
  background-color: var(--white);
  border-radius: 5px;
  padding: 20px 24px;
  padding-bottom: 24px;
}

.statusButtonAmount {
  display: flex;
  align-items: center;
  height: 24px;
}

.statusButtonAmount :global(.icon) {
  width: unset;
  margin: 1px;
}

.activeStatusButton {
  border-bottom: 4px solid var(--blue-medium);
  padding-bottom: 21px;
}

.statusButtonLabel {
  text-align: left;
  font-weight: 800;
  margin-top: 4px;
}

.activeStatusButton .statusButtonLabel {
  color: var(--blue-medium);
}

/* TITLE COMPONENT */

.title {
  font-size: 24px;
  font-family: Evolventa;
  margin: 0;
}

/* INPUT COMPONENT */

.input,
.textarea {
  width: 100%;
  font-size: var(--font-size);
  border: 1px solid var(--gray-medium);
  background-color: var(--white);
  padding: 10px;
  font-weight: 500;
}

.textarea {
  font-size: var(--font-size);
  margin-bottom: 0;
}

.input:focus,
.textarea:focus {
  border-color: var(--blue-medium);
}

.input:hover,
.textarea:hover {
  color: var(--blue-medium);
  border-color: var(--blue-medium);
}

.input:read-only,
.textarea:read-only {
  color: initial;
  border: 1px solid var(--gray-medium);
  background-color: transparent;
}

.input:disabled,
.textarea:disabled {
  background-color: var(--gray-highlight);
  color: var(--gray-dark);
}

/* LABEL TEXT FIELD COMPONENT */

.labelWrapper {
  display: flex;
  flex-direction: column;
  font-size: 15px;
  font-style: italic;
  margin-bottom: 12px;
}

.labelWrapper .labelText {
  display: flex;
  align-items: center;
  margin-left: 4px;
  color: var(--gray-dark);
}

.labelWrapper .labelText :global(.icon) {
  margin-top: 2px;
  margin-left: 4px;
}

.disabledLabel {
  opacity: 0.5;
  pointer-events: none;
}

.labelTextArea,
.textarea {
  flex: 1;
}

.errorLabel .labelText,
.errorLabel:hover .labelText,
.errorLabel:focus .labelText {
  color: var(--red-dark);
}

.errorLabel input,
.errorLabel:hover input,
.errorLabel input:focus {
  color: var(--red-dark);
  border-color: var(--red-dark);
}

/* SEARCH INPUT COMPONENT */

.searchInputWrapper {
  display: flex;
  position: relative;
}

.searchInputWrapper:hover svg {
  stroke: var(--blue-medium);
}

.searchInput {
  border-radius: 45px;
  padding-left: 40px;
  padding-right: 16px;
}

.searchInputWrapper svg {
  position: absolute;
  left: 12px;
  align-self: center;
  pointer-events: none;
}

/* LABEL CHECKBOX COMPONENT */

.labelCheckbox {
  display: flex;
  align-items: center;
  font-size: var(--font-size);
  cursor: pointer;
  height: 66px;
  margin-top: 12px;
  flex-shrink: 0;
}

.labelCheckbox input[type="checkbox"] {
  margin-right: 12px;
  cursor: pointer;
}

/* LOADER OVERLAY COMPONENT */

.loaderOverlay {
  position: absolute;
  justify-content: center;
  align-items: center;
  background-color: var(--gray-light);
  opacity: 0.5;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
}

